2004-06-11  Bryan Chan <b8chan@uwaterloo.ca>
  * src/ShrikeCanvas.?pp (renderObject):
  Usese display lists. (Fix issue120) 

2004-06-10  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/AlgebraShader.cpp (init_all): Use the NDC position
	to halftone, instead of texture coordinates.

	* src/shaders/LCD.cpp: This should be a great debugging tool :).

2004-06-01  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/NonPeriodic.cpp: Use the new boolean functions.

	* src/shaders/AlgebraShader.cpp: Give the textures names.

2004-05-27  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/UniformPanel.cpp (setShader): Use has_name() instead of hasName().

2004-05-21  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/*: Remove redundant bind() implementations, and
	replace shBindShader with shBind (see r937, issue1).

2004-05-20  Bryan Chan <b8chan@uwaterloo.ca>

	* src/shaders/WorleyShader.cpp: Added a bucket load of Worley shaders. 
  
2004-04-14  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/AlgebraShader.cpp (AlgebraShaders): Don't include "nulls" in
	names.
	Rename AlgebraShader to AlgebraShaders and don't make it an
	ShShader. Cut away some unnecessary code while we're at it.

	* src/ShrikeFrame.cpp: Use a treeview instead of a list control
	for the list of shaders.

2004-04-07  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* Ever so many fixes for the new Sh.

2004-04-04  Michael McCool <mmccool@uwaterloo.ca>
	* src/JeweledShader.cpp:
	a complex "hero" shader that uses three brdfs, a specular map,
	material mapping, and environment mapping.   Lots of fun parameters.
	However, discovered two problems:
	  - Lack of a default constructor with no arguments leads to
	    problems when allocating textures in arrays.   Tried to fix
	    by providing default sizes in sh, but this leads to problems
	    with trait wrappers.   Added 1D, 2D, 3D versions of trait
	    wrappers as a temporary fix, but I don't like it.  Will have